--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^9.2.0",
+    "eslint-config-airbnb-standard": "^3.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "readline-sync": "^1.4.10"
   }
 }
