--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/lobedima/fullstack-javascript-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/lobedima/fullstack-javascript-project-44/actions)",
-  "main": "index.js",
+  "description": "This project consists of 5 console games (parity check, calculator, GCD, arithmetic progression, is the number prime?)",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "bin": {
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
